SEt up of better path aliases and xml sitemap

--- a/web/themes/ipu/templates/page/page--search.html.twig
+++ b/web/themes/ipu/templates/page/page--search.html.twig
@@ -39,7 +39,7 @@
                   {% set logo = 'IPU-logo-130-FR.png' %}
                   {% set url = language_id %}
                 {% endif %}
-                <a href="/{{ url }}"><img class="logo" src="{{ base_path ~ directory ~ '/assets/img/' ~ logo }}" /></a>
+                <a class="logo-link" href="/{{ url }}"><img class="logo" src="{{ base_path ~ directory ~ '/assets/img/' ~ logo }}" /></a>
                 {# page.navbar_branding #}
               </div>
             {% endif %}
