Events: ordering by fields across documents, adding field_order to eva view and amending templates to insert data-order, reorder in javascript using the data-order property. Ordering of document lists on document tab. JS to fix event sub-menu as sticky (on md screens). Fix for scrolling on events sub-page clicks or page reloads.

--- a/web/modules/custom/ipu_events/templates/ipu-events-event-documents.html.twig
+++ b/web/modules/custom/ipu_events/templates/ipu-events-event-documents.html.twig
@@ -11,8 +11,13 @@
  */
 #}
 
-<h2 class="event-sub-page__title">Documents</h2>
+<h2 class="event-sub-page__title">{{ title }}</h2>
 
 <div class="ipu-event-documents">
-  {{ content }}
+  <div class="ipu-event-documents-documents">
+      {{ documents }}
+  </div>
+  <div class="ipu-event-documents-session-documents">
+    {{ session_documents }}
+  </div>
 </div>
