--- a/web/themes/ipu/templates/field/field--node--event-documents-tab.html.twig
+++ b/web/themes/ipu/templates/field/field--node--event-documents-tab.html.twig
@@ -6,5 +6,5 @@
 #}
 
 {% for item in items %}
-  <a href="#event-sub-page-documents" class="nav-link" data-toggle="tab">{{ item.content }}</a>
+  <a href="#event-sub-page-documents" data-order="{{ item.content.0['#order']|raw }}" class="nav-link" data-toggle="tab">{{ item.content }}</a>
 {% endfor %}
