Re-add grouping of countries to view.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -32,6 +32,6 @@
     <div class="container">
         <h2>{{ 'In the region'|t }}</h2>
             {{ content.geogroups }}
-        {{ content.countries_region }}
+        {#{ content.countries_region }#}
     </div>
 </div>
