Fix for url reditrect of 137th assembly page. Display of related documents/external links in current language.

--- a/web/themes/ipu/templates/field/field--default--field-external-link--document.html.twig
+++ b/web/themes/ipu/templates/field/field--default--field-external-link--document.html.twig
@@ -14,7 +14,7 @@
 ]
 %}
 
-{% set document_node_title = _context.element['#object'].title.value %}
+{% set document_node_title = _context.element['#object'].getTranslation(language_id).getTitle() %}
 {%
   set title_classes = [
   'field__label',
