--- a/web/themes/ipu/src/sass/block/_block2.scss
+++ b/web/themes/ipu/src/sass/block/_block2.scss
@@ -157,3 +157,9 @@ ul.flickr-block {
     }
   }
 }
+
+.node-article .article__field-video {
+  border: 10px solid $light;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
