Better breadcrumbs, using breadcrumb_menu module. Matched heights to news articles list pages. Remove border from news articles.

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -891,6 +891,7 @@ a.btn {
   .node--view-mode-highlight {
     @extend .text-white;
     @extend .bg-primary;
+    border-width: 0;
     .article__body {
       padding: 10px 0;
     }
