Reorder block slighty, removing content type control on ipu breadcrumbs. Update tweaks module to control visibility of this block. Make publications view all link a button. Make knowledge megamenu CTA links wider.

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1502,6 +1502,14 @@ a.btn {
   }
 }
 
+.view-publications.view-display-id-multiple_ids {
+  .more-link a {
+    @extend .btn;
+    @extend .btn-sm;
+    @extend .btn-outline-primary;
+  }
+}
+
 .node--view-mode-teaser {
   position: relative;
   margin-bottom: $spacer;
