--- a/web/themes/ipu/templates/views/views-view--taxonomy-term.html.twig
+++ b/web/themes/ipu/templates/views/views-view--taxonomy-term.html.twig
@@ -35,6 +35,10 @@
 {%
     set classes = [
     'container',
+    'view',
+    'view-' ~ id|clean_class,
+    'view-id-' ~ id,
+    'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
 ]
 %}
