--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -62,6 +62,12 @@ a {
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
+
+.block--ipu-content img,
+.block--ipu-content iframe {
+  max-width: 100%;
+}
+
 .page__footer {
   background-color: theme-color("dark");
   padding: 40px 0 20px 0;
@@ -600,11 +606,18 @@ a.btn {
 .breadcrumb {
   font-size: $font-size-sm;
 }
+.breadcrumb-item + .breadcrumb-item {
+  @include media-breakpoint-down(sm) {
+    padding-left: 0.25rem;
+  }
+}
 
 .breadcrumb-item + .breadcrumb-item::before {
   content: "|";
+  @include media-breakpoint-down(sm) {
+    padding-right: 0rem;
+  }
 }
-
 // Country page and data points on home page
 
 // Data points
