--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -15,7 +15,7 @@ h1,
   font-weight: 400;
   padding-bottom: 4px;
   border-bottom: 2px solid color("ipu-teal");
-  margin-top: 10px;
+  padding-top: 10px;
   margin-bottom: 20px;
 }
 
