--- a/web/themes/ipu/src/sass/navigation/_nav.scss
+++ b/web/themes/ipu/src/sass/navigation/_nav.scss
@@ -596,22 +596,31 @@ main {
     padding: 0 0 0.5rem 1rem;
     text-align: left;
   }
-  //Nice overlay - for testing
-    @include media-breakpoint-down(sm) {
-      padding: 0.5rem;
-      position: fixed;
-      width: 40px;
-      right: 0;
-      background-color: rgba(255,255,255, 0.6);
-      z-index: 2;
-      top: 20vh;
-      border-radius: 3px;
-      a {
-        padding: 0;
-      }
-    }
-
 }
+.block--addtoanybuttons, .landing-page__dynamic-block-fieldnode-add-to-any > .block {
+  @include media-breakpoint-down(sm) {
+    padding: 0 1rem;
+    position: fixed;
+    width: 100%;
+    right: 0;
+    background-color: rgba(248, 249, 250, 0.8);
+    z-index: 2;
+    bottom: 0;
+    text-align: center;
+    border-top: 1px solid $ipu-light-grey;
+    a {
+      padding: 0.5rem;
+    }
+    .a2a_svg {
+      width: 36px !important;
+      line-height: 36px !important;
+      height: 36px !important;
+      background-size: 36px !important;
+    }
+  }
+}
+
+
 
 ol.breadcrumb {
 background-color: $light;
@@ -622,5 +631,38 @@ margin-bottom: 0;
 @include media-breakpoint-down(sm) {
   .pager__items {
     flex-wrap: wrap;
+  }
+}
+
+.eu-cookie-compliance-content {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  border-top: 2px solid $secondary;
+
+  .eu-cookie-compliance-default-button.agree-button {
+    @extend .btn;
+    @extend .btn-light;
+    @extend .btn-sm;
+    color: $primary;
+    background-image: none;
+    text-shadow: none;
+    box-shadow: none;
+    font-family: $font-family-base;
+  }
+
+  .eu-cookie-compliance-message {
+    h2 {
+      @extend h3;
+    }
+
+    p {
+      font-size: $font-size-sm;
+      font-weight: $font-weight-light;
+    }
+
+    a {
+      color: #fff;
+      font-weight: $font-weight-normal;
+    }
   }
 }
