--- a/web/themes/ipu/templates/menu/menu--off-canvas.html.twig
+++ b/web/themes/ipu/templates/menu/menu--off-canvas.html.twig
@@ -55,6 +55,7 @@
                             {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
                         </div>
                     {% else %}
+                        {{ link(item.title, item.url) }}
                         {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
                     {% endif %}
                 {% else %}
