Updates for styling older versions of io6/safari (which needs webkit-flex) and funny issue with h3 in titles...

--- a/web/themes/ipu/templates/field/field--default--node--node-title--landing-page.html.twig
+++ b/web/themes/ipu/templates/field/field--default--node--node-title--landing-page.html.twig
@@ -29,7 +29,18 @@
     </div>
   {% else %}
     {% for item in items %}
-      <div{{ attributes.addClass(classes) }}><div class="field-node-title-wrapper"><div class="field-node-title-inner">{{ item.content }}<div class="field-node-title-theme-description">{{ theme_description|striptags }}</div></div></div></div>
+      <div{{ attributes.addClass(classes) }}>
+        {% if (amend_title) %}
+        <div class="field-node-title-wrapper">
+          <div class="field-node-title-inner">
+            {{ item.content }}
+            <div class="field-node-title-theme-description">{{ theme_description|striptags }}</div>
+          </div>
+        </div>
+        {% else %}
+          {{ item.content }}
+        {% endif %}
+      </div>
     {% endfor %}
   {% endif %}
 {% else %}
