--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1242,6 +1242,7 @@ a.btn {
       }
     }
     .section-page__node-link,
+    .landing-page__node-link,
     .basic-page__node-link {
       display: none;
     }
@@ -1255,49 +1256,54 @@ a.btn {
       .basic-page__node-title,
       .landing-page__node-title,
       .page__node-title {
+        & > * {
+          margin: 0;
+        }
         position: absolute;
         top: 20px;
-        left: 0px;
+        left: 0;
         background-color: rgb(255, 255, 255, 0.85);
         max-width: calc(100% - 20px);
 
         &:hover {
           background-color: rgb(255, 255, 255, 0.95);
           transition: all 300ms ease;
-
-          a {
-            text-decoration: none;
-            color: $ipu-blue;
-          }
         }
       }
     }
+
     .field-media-image ~ .group-content,
     .group-image ~ .group-content {
       h3 {
         font-size: $font-size-base;
-        padding: 0;
-        margin: 0;
-        a {
-          padding: 4px 8px;
-          display:block;
-          font-weight: 400;
-          &:after {
-            padding-left: 4px;
-            font-family: "Font Awesome 5 Free", sans-serif;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            display: inline-block;
-            font-style: normal;
-            font-variant: normal;
-            font-weight: 900;
-            line-height: 1;
-            content: "\f061" !important;
-          }
-        }
+        margin: 0 !important;
+      }
+    }
+    .field-media-image ~ .group-content,
+    .group-image ~ .group-content {
+      a {
+        padding: 8px 8px;
+        display:block;
+        font-weight: 400;
+        font-size: $font-size-base;
+        line-height: 1.1rem;
+      }
+
+      a:after {
+        padding-left: 4px;
+        font-family: "Font Awesome 5 Free", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 900;
+        line-height: 1;
+        content: "\f061" !important;
       }
 
     }
+
   }
 }
 
@@ -1675,6 +1681,7 @@ a.btn {
   @extend .image-with-caption;
   /* Put caption over image */
   .basic-page__field-caption,
+  .landing-page__field-caption,
   .page__field-caption {
     @extend .image-with-caption-caption;
   }
