Updates for IE10, re-reduce size of hamburger mobile menu

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1996,6 +1996,7 @@ a.btn {
             flex-basis: calc(100% - 95px);
             font-size: $font-size-sm;
             align-self: center;
+            max-width: calc(100% - 95px);
             display: inline-table;
           }
 
