--- a/web/themes/ipu/src/sass/sitesearch.scss
+++ b/web/themes/ipu/src/sass/sitesearch.scss
@@ -56,7 +56,7 @@
   margin-bottom: 10px;
 
 }
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
   #views-exposed-form-search-page-1 {
     .form-item-country {
       display: none;
