Update to view header for geopolitical groups lists to use translation. Required change to field used to display summary from Result to Area. Some styling updates.

--- a/web/themes/ipu/templates/views/views-view.html.twig
+++ b/web/themes/ipu/templates/views/views-view.html.twig
@@ -51,7 +51,7 @@
     {{ title_suffix }}
 
     {% if header %}
-        <header>
+        <header class="view-header">
             {{ header }}
         </header>
     {% endif %}
