--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -2139,12 +2139,14 @@ a.btn {
     width: 40px;
     padding: 2px 10px;
     text-align: center;
+    margin: 0;
   }
   .item-list {
     width: 100%;
     padding-bottom: 4px;
     border-bottom: 1px solid $ipu-light-grey;
     margin-bottom: 4px;
+    display: flex;
   }
   ul {
     list-style: none;
@@ -2159,6 +2161,13 @@ a.btn {
         font-weight: $font-weight-light !important;
       }
     }
+  }
+}
+.view-display-id-block_geo_members {
+  margin-bottom: 20px;
+  .view-header {
+    font-weight: $font-weight-normal;
+    padding: 10px 0;
   }
 }
 .viewfield--view__countries__block_members,
