--- a/web/modules/custom/ipu_orgchart/css/ipu_orgchart.css
+++ b/web/modules/custom/ipu_orgchart/css/ipu_orgchart.css
@@ -14,6 +14,7 @@ table.google-visualization-orgchart-table td.google-visualization-orgchart-node 
   line-height: 1rem !important;
   font-size: 0.8rem !important;
   font-family: inherit !important;
+  color: #fff;
 }
 table.google-visualization-orgchart-table td.google-visualization-orgchart-node:hover {
   border-color: #f90;
