--- a/web/themes/ipu/src/sass/base/_forms.scss
+++ b/web/themes/ipu/src/sass/base/_forms.scss
@@ -1,5 +1,8 @@
 form {
-  input[type='text'], input[type='search'], select {
+  input[type='text'],
+  input[type='search'],
+  input[type='email'],
+  select {
     @extend .form-control;
     padding: 0.125rem 0.5rem !important;
   }
